--- a/JobsMonster/templates/hiring/postdetail.html
+++ b/JobsMonster/templates/hiring/postdetail.html
@@ -1,26 +1,40 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
 
 {% block content %}
+
 <div class="container">
-    <div class="row">
-        <div class="col-8">
-            <h3 class="text-center"></h3>
-            <h5 class="text-center">Description</h5>
-        </div>
-        <div class="col-4">
-            <h3 class="text-center">
-                Date
-            </h3>
-            <h6 class="text-end">Estimaded hour</h6>
-        </div>
-    
+    <div class="text-center">
+        <h3>{{job.title}}</h3>
     </div>
     <div class="row">
-        <div class="actions">
-            <a href=""><button class="btn btn-primary mt-2 ">Apply Now</button></a>
+        <div class="col-4 border border-info">
+            <h3 class="text-center border-bottom">
+                Applicants
+            </h3>
+            {% for applicant in applicants %}
+            <div class="mt-2 border">
+                <h5 class="name text-center">{{applicant.user_id}}</h5>
+                <p class="text-center">{{applicant.user_id.Specialization}}</p>
+                <div class="text-center">
+                <a href="{% url 'detail' applicant.user_id.id %}"><button class="btn btn-primary">Details</button></a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="col-8 border border-info ml-2">
+            <div class="text-center">
+                <h3 class="border-bottom">{{job.title}}</h3>
+            </div class="mt-3">
+            <h4 class="text-center">{{job.description}}</h4>
+            <div class="text-center project-detail border border-info">
+                <h5>Project Duration: {{job.estimated_time}} Hours</h5>
+                <h5>Categories: {{job.category}}</h5>
+            </div>
         </div>
     </div>
 </div>
+              
 
 {% endblock %}
