--- a/JobsMonster/templates/user/profile.html
+++ b/JobsMonster/templates/user/profile.html
@@ -20,7 +20,7 @@
 					  {% else %}
                       <p class="text-muted font-size-sm">{{user.location}}</p>
                       <a href="{% url 'updateprofile' user.id%}"><button class="btn btn-primary">Edit Profile</button></a>
-                      <button class="btn btn-outline-primary">Initiate Project</button>
+                      <a href="{% url 'initiateproject' %}"><button class="btn btn-outline-primary">Initiate Project</button></a>
 					  {% endif %}
                     </div>
                   </div>
@@ -81,17 +81,30 @@
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h3 class="d-flex align-items-center mb-3">Hired posts</h3>
-                      <h5>Teacher Wanted</h5>
-                      
+                      <h3 class="d-flex align-items-center mb-3">Applied Jobs</h3>
+                      {% for job in applied_fors %}
+                      <div class="border p-3 mt-3">
+                      <h5 class="text-center">{{job.jobpost_id}}</h5>
+                      <p class="text-center">{{job.jobpost_id.description}}</p>
+                      <div class="text-center">
+                        <a href=""><button class="btn btn-primary ml-5">Detail</button></a>
+                      </div>
+                    </div>
+                      {% endfor %}
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h3 class="d-flex align-items-center mb-3">My Projects</h6>
-                      <h5>My projects</h5>
+                      <h3 class="d-flex align-items-center mb-3">Hired Projects</h6>
+                      {% for hired_project in hired_projects %}
+                      <h4 class="text-center">{{hired_project.project_id}}</h4>
+                      <p class="text-center">{{hired_project.project_id.description}}</p>
+                      <div class="text-center">
+                      <a href=""><button class="btn btn-primary ml-5">Detail</button></a>
+                    </div>
+                      {% endfor %}
                     </div>
                   </div>
                 </div>
@@ -104,7 +117,9 @@
                       <h3 class="d-flex align-items-center mb-3">My Jobs Posts</h3>
                       {% for post in posts %}
                       <div class="jobpost p-2">
-                        <h4>{{post}}</h4><p class="text-center">{{post.description}}</p><a href="{% url 'editpost' post.id%}"><button class="btn btn-success">Edit</button></a><a href="{% url 'deletepost' post.id%}"><button class="btn btn-danger ml-2">delete</button></a>
+                        <h4>{{post}}</h4><p class="text-center">{{post.description}}</p>
+                        <a href="{% url 'editpost' post.id%}"><button class="btn btn-primary">Edit</button></a>
+                        <a href="{% url 'jobdetail' post.id%}"><button class="btn btn-success">View</button></a>
                       </div>
                       {% endfor %}
                     </div>
@@ -114,7 +129,14 @@
                   <div class="card h-100">
                     <div class="card-body">
                       <h3 class="d-flex align-items-center mb-3">My Projects</h6>
-                      <h5>My projects</h5>
+                        {% for project in projects %}
+                        <div class="jobpost p-2">
+                          <h4>{{project.title}}</h4>
+                          <p class="text-center">{{project.description}}</p>
+                          <a href="{% url 'editproject' project.id %}"><button class="btn btn-primary">Edit</button></a>
+                          <a href="{% url 'projectdetail' project.id %}"><button class="btn btn-success">Details</button></a>
+                        </div>
+                        {% endfor %}
                     </div>
                   </div>
                 </div>
