--- a/JobsMonster/templates/jobs/homepage.html
+++ b/JobsMonster/templates/jobs/homepage.html
@@ -20,8 +20,8 @@
 
                     <!-- Button -->
                     <p class="mb-0">
-                        <a href="#" target="_blank" class="btn btn-primary btn-circled">
-                            Learn More
+                        <a href="{% url 'choice' %}" target="_blank" class="btn btn-primary btn-circled">
+                            Register Now
                         </a>
                     </p>
                 </div>
