--- a/JobsMonster/templates/jobs/jobs_home.html
+++ b/JobsMonster/templates/jobs/jobs_home.html
@@ -1,10 +1,9 @@
 
 {% if messages %}
-<ul class="messages text-center">
     {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}><h3>{{ message }}</h3></li>
+    <p class="text-center alert alert-info">{{ message }}</p>
     {% endfor %}
-</ul>
+
 {% endif %}
 <div class="container">
     <div class="row">
