--- a/JobsMonster/templates/user/login.html
+++ b/JobsMonster/templates/user/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% if messages %}
 {% for message in messages %}
-  <p>{{message}}</p>
+  <p class=" text-center alert alert-danger">{{message}}</p>
 {% endfor %}
 {% endif %}
 
