--- a/JobsMonster/templates/user/professionalregister.html
+++ b/JobsMonster/templates/user/professionalregister.html
@@ -7,7 +7,7 @@
       <div class="card card-signin my-5">
         <div class="card-body">
           <h5 class="card-title text-center"><b>Register</b></h5>
-          <form class="form-signin" method="POST">
+          <form class="form-signin" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
               <br />
