--- a/JobsMonster/templates/user/profile.html
+++ b/JobsMonster/templates/user/profile.html
@@ -27,6 +27,7 @@
                 </div>
               </div>
             </div>
+            {% if user.Specialization %}
             <div class="col-md-8">
               <div class="card mb-3">
                 <div class="card-body">
@@ -76,6 +77,41 @@
                   </div>
                 </div>
               </div>
+              {% else %}
+              <div class="col-md-8">
+                <div class="card mb-3">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">Full Name</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        {{user.get_full_name}}
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">Email</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        {{user.email}}
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">Location</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        {{user.location}}
+                      </div>
+                    </div>
+                    <hr>
+                    <hr>
+                  </div>
+                </div>
+                {% endif %}
               {% if user.Specialization %}
               <div class="row gutters-sm">
                 <div class="col-sm-6 mb-3">
@@ -87,7 +123,7 @@
                       <h5 class="text-center">{{job.jobpost_id}}</h5>
                       <p class="text-center">{{job.jobpost_id.description}}</p>
                       <div class="text-center">
-                        <a href=""><button class="btn btn-primary ml-5">Detail</button></a>
+                        <a href="{% url 'appliedjobdetail' job.id %}"><button class="btn btn-primary ml-5">Detail</button></a>
                       </div>
                     </div>
                       {% endfor %}
@@ -102,7 +138,7 @@
                       <h4 class="text-center">{{hired_project.project_id}}</h4>
                       <p class="text-center">{{hired_project.project_id.description}}</p>
                       <div class="text-center">
-                      <a href=""><button class="btn btn-primary ml-5">Detail</button></a>
+                      <a href="{% url 'hiredprojectdetail' hired_project.id %}"><button class="btn btn-primary ml-5">Detail</button></a>
                     </div>
                       {% endfor %}
                     </div>
