--- a/JobsMonster/templates/developers.html
+++ b/JobsMonster/templates/developers.html
@@ -9,7 +9,7 @@
     <div class="card">
       <div class="card-body">
         <div class="d-flex flex-column align-items-center text-center">
-          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+          <img src="https://scontent.fktm8-1.fna.fbcdn.net/v/t1.0-9/123256555_3203111306482632_6942707114005366131_o.jpg?_nc_cat=105&ccb=3&_nc_sid=09cbfe&_nc_ohc=o67qpEuYhm8AX-s909U&_nc_ht=scontent.fktm8-1.fna&oh=41df4d5ec507f0b3645b7fbc706f28eb&oe=60621230" alt="Admin" class="rounded-circle" width="150">
           <div class="mt-3">
             <h4>Prajwal Thapa</h4>
             <p class="text-secondary mb-1">Currently a Student</p>
@@ -24,7 +24,7 @@
     <div class="card">
       <div class="card-body">
         <div class="d-flex flex-column align-items-center text-center">
-          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+          <img src="https://scontent.fktm8-1.fna.fbcdn.net/v/t1.0-9/123409879_1691468044348635_7000561334022342346_o.jpg?_nc_cat=109&ccb=3&_nc_sid=e3f864&_nc_ohc=B4cBzSFxygUAX8SaR9b&_nc_ht=scontent.fktm8-1.fna&oh=8286c0ebc6bbdace7f5d4d14d6fd624c&oe=605FDA4F" alt="Admin" class="rounded-circle" height="150" width="150">
           <div class="mt-3">
             <h4>Pradip Dulal</h4>
             <p class="text-secondary mb-1">Currently a Student</p>
@@ -39,7 +39,7 @@
     <div class="card">
       <div class="card-body">
         <div class="d-flex flex-column align-items-center text-center">
-          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+          <img src="https://scontent.fktm8-1.fna.fbcdn.net/v/t1.0-1/p200x200/107736140_1710676215763108_5304709332624693839_o.jpg?_nc_cat=109&ccb=3&_nc_sid=7206a8&_nc_ohc=1tfYhr7ArG8AX_D7HYL&_nc_ht=scontent.fktm8-1.fna&tp=6&oh=14f2fa02b70c047a26dcc3baa0ac3a3a&oe=6062D6D2" alt="Admin" class="rounded-circle" width="150">
           <div class="mt-3">
             <h4>Rabin Sapkota</h4>
             <p class="text-secondary mb-1">Currently a Student</p>
@@ -54,7 +54,7 @@
     <div class="card">
       <div class="card-body">
         <div class="d-flex flex-column align-items-center text-center">
-          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+          <img src="https://scontent.fktm8-1.fna.fbcdn.net/v/t1.0-1/s200x200/149855095_1610671639120768_3882396226983644823_o.jpg?_nc_cat=104&ccb=3&_nc_sid=7206a8&_nc_ohc=aMlzEwo_TooAX9aBk0F&_nc_ht=scontent.fktm8-1.fna&tp=7&oh=3f8558104c7e07b326598c9f739a49e0&oe=60624473" alt="Admin" class="rounded-circle" width="150">
           <div class="mt-3">
             <h4>Utsab Pyakurel</h4>
             <p class="text-secondary mb-1">Currently a Student</p>
