--- a/JobsMonster/templates/jobs/hire_home.html
+++ b/JobsMonster/templates/jobs/hire_home.html
@@ -60,7 +60,8 @@
     </div>
 </div>
 </div>
-<div class="pagination">
+<div class="text-xs-center">
+<div class="pagination justify-content-center h4">
     <span class="step-links">
         {% if page_obj_user.has_previous %}
             <a href="?page=1">&laquo; first</a>
@@ -77,7 +78,8 @@
         {% endif %}
     </span>
 </div>
-
+</div>
+<br>
 <script>
    
 </script>
