--- a/JobsMonster/templates/contact.html
+++ b/JobsMonster/templates/contact.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+{% if messages %}
+{% for message in messages %}
+  <p class=" text-center alert alert-success">{{message}}</p>
+{% endfor %}
+{% endif %}
 <section class="Material-contact-section section-padding section-dark">
     <div class="container">
         <div class="row">
@@ -34,8 +38,9 @@
             </div>
             <!-- contact form -->
             <div class="col-md-6 wow animated fadeInRight" data-wow-delay=".2s">
-                <form class="shake" role="form" method="post" id="contactForm" name="contact-form" data-toggle="validator">
+                <form class="shake" action="{% url 'contact' %}" role="form" method="post" id="contactForm" id="contact-form" data-toggle="validator">
                     <!-- Name -->
+                    {% csrf_token %}
                     <div class="form-group label-floating">
                       <label class="control-label" for="name">Name</label>
                       <input class="form-control" id="name" type="text" name="name" required data-error="Please enter your name">
