--- a/JobsMonster/templates/jobs/homepage.html
+++ b/JobsMonster/templates/jobs/homepage.html
@@ -20,7 +20,7 @@
 
                     <!-- Button -->
                     <p class="mb-0">
-                        <a href="{% url 'choice' %}" target="_blank" class="btn btn-primary btn-circled">
+                        <a href="{% url 'choice' %}" class="btn btn-primary btn-circled">
                             Register Now
                         </a>
                     </p>
