--- a/JobsMonster/templates/jobs/jobs_home.html
+++ b/JobsMonster/templates/jobs/jobs_home.html
@@ -30,7 +30,7 @@
     {% endfor %}
 </div>
 <div class="text-center">
-<div class="pagination">
+<div class="pagination justify-content-center h4">
     <span class="step-links">
         {% if page_obj_jobs.has_previous %}
             <a href="?page=1">&laquo; first</a>
@@ -48,5 +48,5 @@
     </span>
 </div>
 </div>
-
+<br>
 
