--- a/JobsMonster/templates/projects/projectdetail.html
+++ b/JobsMonster/templates/projects/projectdetail.html
@@ -23,11 +23,11 @@
                 <p class="text-center">Details</p>
                 <div class="text-center">
                 <a href="{% url 'detail' manpower.user_id.id %}"><button class="btn btn-primary">Details</button></a>
-                <a href="{% url 'terminate' manpower.user_id.id project.id%}"><button class="btn btn-danger">Terminate</button></a>
+                <a href="{% url 'terminate' manpower.user_id.id project.id%}" onclick="return confirm('Are you sure to terminate this participant?')"><button class="btn btn-danger">Terminate</button></a>
                 </div>
             </div>
             {% endfor %}
-            <div class="pagination">
+            <div class="pagination justify-content-center h5">
                 <span class="step-links">
                     {% if page_obj_manpowers.has_previous %}
                         <a href="?page=1">&laquo; first</a>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 {% endfor %}
-                <div class="pagination">
+                <div class="pagination justify-content-center h5">
                     <span class="step-links">
                         {% if page_obj_users.has_previous %}
                             <a href="?page=1">&laquo; first</a>
@@ -109,7 +109,7 @@
             <h5 class="text-center">Delete post? no way around once done</h5>
             <p></p>
             <br>
-            <a href="{% url 'deleteproject' project.id %}"><button class="btn btn-danger ml-2">Terminate Project</button></a>
+            <a href="{% url 'deleteproject' project.id %}" onclick="return confirm('Are you sure to delete it you cannot undo it')"><button class="btn btn-danger ml-2">Terminate Project</button></a>
         </div>
         <div class="col-3"></div>
     </div>
